--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^1.4.1",
+    "async": "^2.6.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-photo-gallery": "^1.0.9",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.1.0",
     "mongodb": "^2.2.29",
